--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<img src="lion.png" style="width: 100px; display: block; margin-left: auto; margin-right: auto;">
-<h3 style="letter-spacing: 5px; text-align: center;">Justin</h3>
-<p style="text-align: center;"><span style="color: red; font-weight: 500;">Front-end</span> Developer</p>
-<p style="text-align: center; margin-top: 40px;">저는 개발을 열심히 배우려고 노력하는 개발자입니다.</pㅡ>
-<p style="text-align: center;">노력하는 것을 제일 좋아합니다</p>
-<p style="text-align: center;">또한 기록하는 것도 좋아합니다. 바보의 펜이 천재의 머리보다 낫다고 생각합니다.</p>
-</html>
+<img src="lion.png" class="profile">
+<h3 class="title">Justin</h3>
+<p class="content"><span style="color: red; font-weight: 500;">Front-end</span> Developer</p>
+<div class="box">
+    <p style="text-align: center;">저는 개발을 열심히 배우려고 노력하는 개발자입니다.</p>
+    <p style="text-align: center;">노력하는 것을 제일 좋아합니다</p>
+    <p style="text-align: center;">또한 기록하는 것도 좋아합니다. 바보의 펜이 천재의 머리보다 낫다고 생각합니다.</p>
+    </html>
+</div>
