--- a/homework2.html
+++ b/homework2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <ul class="navbar">
+        <ul class="navbar content">
             <li><a href="#">영화</a></li>
             <li><a href="#">맛집</a></li>
             <li><a href="#">IT</a></li>
