--- a/homework3.html
+++ b/homework3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/homewrok3.css">
+    <link rel="stylesheet" href="css/homework3.css">
 </head>
 <body>
     <nav>
