--- a/homework7.html
+++ b/homework7.html
@@ -22,16 +22,33 @@
       <tbody>
         <tr class="camera">
           <td><img src="sony.jpeg" width="50px"></td>
-          <td>카메라</td>
+          <td>
+            <h3>SONY</h3>
+            <p>FE 70-200 mm F2.8 GM OSS</p>
+          </td>
+          <td id="price">1</td>
+          <td>7000</td>
+          <td>7000</td>
+        </tr>
+        <tr class="camera">
+          <td><img src="sony2.jpeg" width="50px"></td>
+          <td>
+            <h3>SONY</h3>
+            <p>Sonnar T* E 24 mm F1.8 ZA</p>
+          </td>
           <td id="price">1</td>
           <td>7000</td>
           <td>7000</td>
         </tr>
         <tr>
-          <td colspan="5" style=" text-align: right;">총 가격: 7000</td>
+          <td colspan="5" style=" text-align: right;">총 가격: 14000</td>
         </tr>
       </tbody>
     </table>
+    <div class="bottom-box">
+      <a href="">Edit your shopping cart</a>
+      <button class="button">Choose payment method</button>
+    </div>
   </div>
 </body>
 </html>
