BEM,OOCSS 강의 들음

--- a/homework7.html
+++ b/homework7.html
@@ -46,7 +46,7 @@
       </tbody>
     </table>
     <div class="bottom-box">
-      <a href="">Edit your shopping cart</a>
+      <a class="link" href="">Edit your shopping cart</a>
       <button class="button">Choose payment method</button>
     </div>
   </div>
