미디어쿼리 강의 들음

--- a/layout2.html
+++ b/layout2.html
@@ -8,7 +8,7 @@
   </head>
   <body style="margin: 0;">
     <div class="main-background">
-        <h4 class="main-title">Buy our shoes</h4>
+        <h4 class="main-title">Buy our shoes Now On Sale</h4>
         <p class="main-description">
           우리 신발을 사세요 최소의 신발입니다. <br>
           우리 신발을 경험해보고 싶다면 아래 버튼을 클릭하세요 
