IE9이하 일때 flex 대신 nav바 만들기

--- a/layout4.html
+++ b/layout4.html
@@ -16,9 +16,8 @@
 
   <nav class="nav-container">
     <div class="nav-item">ShooShop</div>
-    <div style="flex-grow: 1;"></div>
-    <div class="nav-item">Products</div>
-    <div class="nav-item">Services</div>
+    <div class="nav-item2" >Products</div>
+    <div class="nav-item2">Services</div>
   </nav>
 </body>
 </html>
