font-awesome 강의

--- a/homework8.html
+++ b/homework8.html
@@ -5,25 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/homework8.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
   <div class="container">
     <div class="wrapper">
       <div class="margin">
+        <i class="fas fa-shopping-cart fa-3x"></i>
         <h4>Fast Shipping</h4>
         <p>lorem ipsum</p>
       </div>
       <div class="margin">
+        <i class="fas fa-concierge-bell fa-3x"></i>
         <h4>Good Service</h4>
         <p>lorem ipsum</p>
       </div>
     </div>
     <div class="wrapper">
       <div class="margin">
+        <i class="fas fa-ticket-alt fa-3x"></i>
         <h4>Free Coupons</h4>
         <p>lorem ipsum</p>
       </div>
       <div class="margin">
+        <i class="fas fa-plus fa-3x"></i>
         <h4>New product</h4>
         <p>lorem ipsum</p>
       </div>
